# codotaku_vibe

./: .gitignore  CMakeLists.txt  CMakePresets.json  components.i
assets/shaders/: Cube.vert.hlsl  SolidColor.frag.hlsl  compile.ps1
assets/shaders/compiled/DXIL/: Cube.vert.dxil
assets/shaders/compiled/MSL/: Cube.vert.msl
assets/shaders/compiled/SPIRV/: Cube.vert.spv
include/: camera.hpp  components.hpp  gbuffer.hpp  geometry.hpp  gpu_context.hpp  image_decoder.hpp  material.hpp  model_loader.hpp  renderer.hpp  resource_manager.hpp  scene.hpp  sdl.hpp  uploader.hpp
src/: camera.cpp  gbuffer.cpp  geometry.cpp  gpu_context.cpp  image_decoder.cpp  main.cpp  material.cpp  model_loader.cpp  renderer.cpp  resource_manager.cpp  scene.cpp  uploader.cpp
